handled empty msgs case, prevent user from sending empty msg, send msg on enter, fixed chat input cursor alignment

--- a/src/components/account/subscriptions/styles.sass
+++ b/src/components/account/subscriptions/styles.sass
@@ -177,16 +177,16 @@
     padding: 15px
     .input-chat
       position: relative
-      textarea
-        padding-right: 100px
+      input
+        padding-right: 80px
         padding-left: 65px
       .light-btn
         position: absolute
-        top: 10px
-        left: 10px
+        top: 4px
+        left: 5px
     .options
       position: absolute
-      top: 14px
+      top: 8px
       right: 5px
       li
         width: 20px
