--- a/src/components/categories/quick-questions/styles.sass
+++ b/src/components/categories/quick-questions/styles.sass
@@ -140,71 +140,6 @@
   padding: 0px !important
   margin-bottom: 15px
 
-.chat-window
-  .chat-history
-    padding: 30px 15px 20px
-    border-bottom: 2px solid white
-    overflow-y: scroll
-    height: 575px
-    .message-data
-      text-align: left
-      margin-bottom: 5px
-      color: #707070
-      font-size: 12px
-      margin-left: 35px
-    .message
-      font-size: 12px
-      padding: 15px
-      border-radius: 7px
-      width: 70%
-      position: relative
-    .my-message
-      background: #9786d2
-      border-bottom-right-radius: 0px
-      word-break: break-all
-    .other-message
-      background: #f5f5f5
-      border-bottom-left-radius: 0px
-      word-break: break-all
-      &:after
-        border-bottom-color: #94c2ed
-        left: 93%
-  .chat-message
-    padding: 15px
-    .input-chat
-      position: relative
-      textarea
-        padding-right: 100px
-        padding-left: 65px
-      .light-btn
-        position: absolute
-        top: 10px
-        left: 10px
-    .options
-      position: absolute
-      top: 14px
-      right: 5px
-      li
-        width: 20px
-        margin-left: 5px
-        text-align: center
-
-.emoji-mart-scroll
-  border-bottom: 0
-  margin-bottom: 6px
-  + .emoji-mart-bar
-    display: none
-.emoji-mart-search
-  display: none
-
-.chat-sidebar
-  .chat-item
-    padding-left: 15px
-    padding-right: 15px
-    &:hover
-      background-color: #f7f7f7
-      transition: background-color ease-out 0.3s
-
 .recorded-video
   iframe
     width: 100%
